# sudoku

./: .gitignore  Cargo.toml  Dockerfile  README.md  app.js  docker-compose.yml  index.html  manifest.webmanifest  package.json  playwright.config.js  styles.css  sw.js
ocr/: Dockerfile  app.py  requirements.txt
ocr/models/: mnist-8.onnx
ocr/train/: requirements.txt  train_sudoku_cnn.py
src/: main.rs
tests/: sudoku.spec.js
